<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icon_home"
        android:title="@string/menu_home" />

    <group
        android:id="@+id/submenu_secondary"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/icon_videos"
            android:title="@string/menu_videos" />
        <item
            android:id="@+id/nav_social_media"
            android:icon="@drawable/icon_social_media"
            android:title="@string/menu_social_meia" />

    </group>

    <item
        android:id="@+id/submenu_others"
        android:title="@string/others">

        <menu>

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/icon_about"
                android:title="@string/about" />

            <item
                android:id="@+id/nav_terms_condition"
                android:icon="@drawable/icon_terms"
                android:title="@string/terms_condition" />

        </menu>

    </item>

</menu>