<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.shashi.qtvapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_videos"
        android:name="com.shashi.qtvapp.ui.videos.VideosFragment"
        android:label="@string/menu_videos"
        tools:layout="@layout/fragment_videos" />

    <fragment
        android:id="@+id/nav_social_media"
        android:name="com.shashi.qtvapp.ui.socialmedia.SocialMediaFragment"
        android:label="@string/menu_social_meia"
        tools:layout="@layout/fragment_social_media" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.shashi.qtvapp.ui.others.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_terms_condition"
        android:name="com.shashi.qtvapp.ui.others.TermsFragment"
        android:label="@string/terms_condition"
        tools:layout="@layout/fragment_terms" />

</navigation>