<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/follow"
        android:textColor="#0ABDE3"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/design_button_blue"
        android:drawableLeft="@drawable/icon_instagram_small"
        android:drawablePadding="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/instagram"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/design_button_blue"
        android:drawableLeft="@drawable/icon_facebook_small"
        android:drawablePadding="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_instagram"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="@+id/button_instagram"
        app:layout_constraintTop_toBottomOf="@+id/button_instagram" />

    <Button
        android:id="@+id/button_Twitter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/design_button_blue"
        android:drawableLeft="@drawable/icon_twitter_small"
        android:drawablePadding="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="start"
        android:padding="15dp"
        android:text="@string/twitter"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_facebook"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="@+id/button_facebook"
        app:layout_constraintTop_toBottomOf="@+id/button_facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>
